--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <img class="portrait" src="/img/_DSC1999.JPG">
+            <img class="portrait" src="/img/user.jpg">
         </div>
 
         {{>footer}}
