--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -16,8 +16,15 @@
                 <input placeholder="Location">
                 <button>Search</button>
             </form>
-            <p id="message-1"></p>
-            <p id="message-2"></p>
+            <div class = "data">
+                <p id="message-1"></p>
+                <p id="message-2"></p>
+                <p id="message-3"></p>
+                <p id="message-4"></p>
+                <p id="message-5"></p>
+                <p id="message-6"></p>
+                <p id="message-7"></p>
+            </div>
         </div>
 
         {{>footer}}
