Adding quotes to the home page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,6 +30,9 @@ header{
     font-style: italic;
     font-size: 20px;
 }
+#author{
+    padding-left: 90%;
+}
 h1{
     font-size: 64px;
     margin-bottom: 16px;
