--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,8 +1,10 @@
 <header>
-    <h1>{{title}}</h1>
-    <a href="/">Home</a>
+    <h1 align="right">Weatherly</h1>
+    <h2>{{title}}</h2>
+    <a href="/">Weather</a>
+    <a href="/covid">COVID-19</a>
     <a href="/about">About</a>
-    <a href="/help">help</a>
+    <a href="/help">Help</a>
 </header>
 
 
