--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -27,6 +27,7 @@
                 <p id="message-7"></p>
             </div>
         </div>
+        <button id="test">press me</button>
 
         {{>footer}}
         <script src="/js/app.js"></script>
